--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@angular/upgrade": "^6.0.0",
     "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
